# devices-qemu-aarch64-xpack

./: CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json  xpack.json
include/micro-os-plus/: device.h
include/micro-os-plus/architecture-aarch64/: exception-handlers.h
include/micro-os-plus/architecture-cortexa/: exception-handlers.h
linker-scripts/: mem-cortex-a15.ld  mem-cortex-a72.ld
src/: boot.S  exception-handlers.cpp  interrupt-vectors.S  reset-handler.S  system_cortexa.c  vectors_cortexa.c
